# loql

./: .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml  release.yml  tests.yaml
src/clidb/: __init__.py  __main__.py  app.py  cli.py  database.py  events.py  views.py
src/loql/: __init__.py  __main__.py  app.py  cli.py  style.tcss  views.py
tests/: test_app.py  test_database.py
