[tool.poetry]
name = "clidb"
version = "0.1.0"
description = "CLI based SQL client for local data"
authors = ["Danny Boland <danny@boland.dev>"]
homepage = "https://github.com/dannyboland/clidb"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Database",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
textual = "0.1.*"
textual-inputs = "0.2.*"
duckdb = "^0.3.2"
pandas = {version = "^1.3", optional = true}

[tool.poetry.dev-dependencies]
mypy = "^0.941"
black = "^22.1.0"
pytest = "^7.1.1"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
pandas = ["pandas"]

[tool.poetry.scripts]
clidb = "clidb.cli:CliDB.run"
